[gd_scene load_steps=13 format=2]

[ext_resource path="res://babosos/Space_baboso_fiery.gd" type="Script" id=1]
[ext_resource path="res://gfx/Space_baboso_basic.png" type="Texture" id=2]
[ext_resource path="res://gfx/Baboso_fiery_attack.png" type="Texture" id=3]
[ext_resource path="res://sounds/Baboso_basic_hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/Baboso_fiery_attack.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/Baboso_fiery_fails.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 12, 13 ]
}

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 6 )

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "death_on_attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[node name="Space_baboso_fiery" type="Area2D" groups=[
"total_babosos",
]]
position = Vector2( 80, 48 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
hframes = 6
frame = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/death = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.039

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -80, -48 )
stream = ExtResource( 5 )
volume_db = -4.289

[node name="FailSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -4.039

[node name="FieryInAction" type="Area2D" parent="."]
visible = false
collision_mask = 5

[node name="AttackSprite" type="Sprite" parent="FieryInAction"]
texture = ExtResource( 3 )
hframes = 7

[node name="AttackAnimation" type="AnimationPlayer" parent="FieryInAction"]
anims/attack = SubResource( 4 )
anims/death_on_attack = SubResource( 5 )
anims/retreat = SubResource( 6 )

[node name="AttackCollisionShape" type="CollisionShape2D" parent="FieryInAction"]
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="FieryInAction"]
[connection signal="area_entered" from="." to="." method="_on_Space_baboso_fiery_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Space_baboso_fiery_area_exited"]
[connection signal="area_shape_entered" from="." to="." method="_on_Baboso_get_hit_by_laser"]
[connection signal="area_shape_entered" from="FieryInAction" to="." method="_on_FieryInAction_get_hit_by_laser"]
